User Stories #8 and #9

--- a/tech_doc.html
+++ b/tech_doc.html
@@ -78,6 +78,12 @@
     #Reference{
 
     }
+
+    /*User story #8*/
+    #navbar{
+
+    }
+
   </style>
 
   <head>
@@ -88,6 +94,14 @@
     <!--This is the script for testing the project - ensure its set to technical
     documentation page -->
       <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+    <!-- User Story #8-->
+    <nav id="navbar">
+
+      <!-- User story #9 - header element in the nav bar -->
+      <header>JS Documentation</header>
+      
+    </nav>
 
     <!--User story 1 - the main element -->
     <main id="main-doc">
