--- a/tech_doc.html
+++ b/tech_doc.html
@@ -84,6 +84,11 @@
 
     }
 
+    /*User Story #10*/
+    .nav-link{
+
+    }
+
   </style>
 
   <head>
@@ -100,7 +105,21 @@
 
       <!-- User story #9 - header element in the nav bar -->
       <header>JS Documentation</header>
-      
+
+      <!-- User Story #10 - hyper links for the sections-->
+      <a class="nav-link">Introduction</a>
+      <a class="nav-link">What You Should Already Know</a>
+      <a class="nav-link">JavaScript and Java</a>
+      <a class="nav-link">Hello World</a>
+      <a class="nav-link">Variables</a>
+      <a class="nav-link">Declaring Variables</a>
+      <a class="nav-link">Variable Scope</a>
+      <a class="nav-link">Constants</a>
+      <a class="nav-link">Data Types</a>
+      <a class="nav-link">If...Else Statement</a>
+      <a class="nav-link">While Statement</a>
+      <a class="nav-link">Function Declarations</a>
+      <a class="nav-link">Reference</a>
     </nav>
 
     <!--User story 1 - the main element -->
