--- a/tech_doc.html
+++ b/tech_doc.html
@@ -107,19 +107,19 @@
       <header>JS Documentation</header>
 
       <!-- User Story #10 - hyper links for the sections-->
-      <a class="nav-link">Introduction</a>
-      <a class="nav-link">What You Should Already Know</a>
-      <a class="nav-link">JavaScript and Java</a>
-      <a class="nav-link">Hello World</a>
-      <a class="nav-link">Variables</a>
-      <a class="nav-link">Declaring Variables</a>
-      <a class="nav-link">Variable Scope</a>
-      <a class="nav-link">Constants</a>
-      <a class="nav-link">Data Types</a>
-      <a class="nav-link">If...Else Statement</a>
-      <a class="nav-link">While Statement</a>
-      <a class="nav-link">Function Declarations</a>
-      <a class="nav-link">Reference</a>
+      <a class="nav-link" href="#Introduction">Introduction</a>
+      <a class="nav-link" href="#What_You_Should_Already_Know">What You Should Already Know</a>
+      <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+      <a class="nav-link" href="#Hello_World">Hello World</a>
+      <a class="nav-link" href="#Variables">Variables</a>
+      <a class="nav-link" href="#Declaring_Variables">Declaring Variables</a>
+      <a class="nav-link" href="#Variable_Scope">Variable Scope</a>
+      <a class="nav-link" href="#Constants">Constants</a>
+      <a class="nav-link" href="#Data_Types">Data Types</a>
+      <a class="nav-link" href="#If...Else_Statement">If...Else Statement</a>
+      <a class="nav-link" href="#While_Statement">While Statement</a>
+      <a class="nav-link" href="#Function_Declarations">Function Declarations</a>
+      <a class="nav-link" href="#Reference">Reference</a>
     </nav>
 
     <!--User story 1 - the main element -->
