--- a/tech_doc.html
+++ b/tech_doc.html
@@ -82,13 +82,160 @@
     /*User story #8*/
     #navbar{
 
+
     }
 
     /*User Story #10*/
-    .nav-link{
+
+    #nav-link{
 
     }
 
+    /*User Story #14 - display for desktops and latops*/
+    @media(min-width: 800px) {
+
+      #flex-container{
+        /*display: flex - Turn on flex*/
+        display: flex;
+
+        /*Flex-direction */
+        flex-direction: column;
+
+        /*    Flex-wrap -Nowrap = flex will try and fit everything onto one line */
+
+        flex-wrap: nowrap;
+
+        /*
+        * Flex flow is shorthand for both of these
+        *  Flex-flow: direction wrap
+        */
+        flex-flow: row wrap;
+
+        /*
+        *   Justify-content - This property defines how to align the content with the space available
+        *                     IMPORTANT:  Note this applies to the main axis
+        *                     i.e the flow of the flex box its the opposite of align-items property
+        *
+        *   There are several options:
+        *
+        *    *flex-start *flex-end *center *space-between *space-around *space-evenly
+        */
+
+        justify-content: space-evenly;
+
+        /*
+        *   Align-items  - this property aligns all the items along the cross axis
+        *                 IMPORTANT this is the opposite axis to the justify-content property
+        *                 Options are:
+        *
+        *                  *stretch *flex-start *flex-end *center *baseline
+        *
+        */
+
+        align-items:  center;
+
+        /*
+        *     Align-content - This aligns a flex container's lines within when there is
+        *                     extra space in the cross-axis, similar to how justify-content aligns
+        *                     individual items within the main-axis. Options:
+        *
+        *      *flex-start *flex-end *center *space-between *space-around *space-evenly
+        */
+
+        Align-content: flex-start;
+
+
+      }
+
+      #main-doc{
+        /*Order - First item*/
+
+        order: 2;
+
+        /* Flex Grow */
+
+        flex-grow: 1;
+
+        /*Flex-shrink */
+
+        flex-shrink 1;
+
+        /*
+        *   Flex-basis - This defines the default size of an element before the remaining space
+        *                is distributed. It can be a length (e.g. 20%, 5rem, etc.) or a keyword.
+        *                The auto keyword means "look at my width or height property" (which was
+        *                temporarily done by the main-size keyword until deprecated). The content
+        *                keyword means "size it based on the item's content" - this keyword isn't
+        *                well supported yet, so it's hard to test and harder to know what its brethren
+        *                max-content, min-content, and fit-content do.
+        */
+
+        flex-basis: 80%;
+
+
+        /*
+        *     Align-self - This allows the default alignment (or the one specified by align-items)
+        *                  to be overridden for individual flex items.
+        *
+        *                 Please see the align-items explanation (container) to understand the available values.
+        */
+
+        align-self: flex-start;
+      }
+
+
+
+
+        #navbar{
+
+          /*Order - First item*/
+
+          order: 1;
+
+          /* Flex Grow */
+
+          flex-grow: 1;
+
+          /*Flex-shrink */
+
+          flex-shrink 1;
+
+          /*
+          *   Flex-basis - This defines the default size of an element before the remaining space
+          *                is distributed. It can be a length (e.g. 20%, 5rem, etc.) or a keyword.
+          *                The auto keyword means "look at my width or height property" (which was
+          *                temporarily done by the main-size keyword until deprecated). The content
+          *                keyword means "size it based on the item's content" - this keyword isn't
+          *                well supported yet, so it's hard to test and harder to know what its brethren
+          *                max-content, min-content, and fit-content do.
+          */
+
+          flex-basis: 20%;
+
+
+          /*
+          *     Align-self - This allows the default alignment (or the one specified by align-items)
+          *                  to be overridden for individual flex items.
+          *
+          *                 Please see the align-items explanation (container) to understand the available values.
+          */
+
+          align-self: flex-start;
+
+          /*fix the positon*/
+          position: fixed;
+          /*algin fully with the left hand side of the page*/
+          left: 0;
+          /*set a width*/
+          width: 300px;
+
+          
+
+        }
+
+      }
+
+    }
   </style>
 
   <head>
@@ -99,7 +246,7 @@
     <!--This is the script for testing the project - ensure its set to technical
     documentation page -->
       <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
+    <div id="flex_container">
     <!-- User Story #8-->
     <nav id="navbar">
 
@@ -420,7 +567,7 @@
       </section>
 
     </main>
-
+  </div>
   </body>
 
 
