--- a/tech_doc.html
+++ b/tech_doc.html
@@ -13,8 +13,12 @@
 
  -->
 <html>
-
   <style>
+
+  #flex_container{
+    max-width:  100%;
+    max-height: 100%;
+  }
 
     /*user story 1 - main-doc id */
     #main-doc{
@@ -81,7 +85,14 @@
 
     /*User story #8*/
     #navbar{
+        margin: 2px;
+        padding: 5px;
+        text-align: center;
+        height: 90%;
 
+        border-color: black;
+        border: 3px;
+        border-style: solid;
 
     }
 
@@ -92,150 +103,103 @@
     }
 
     /*User Story #14 - display for desktops and latops*/
-    @media(min-width: 800px) {
+    @media(min-width: 1100px) {
 
       #flex-container{
+
+        /*
+        *     Use a flex box to hold the #navbar and #main-doc in columns
+        */
+
         /*display: flex - Turn on flex*/
         display: flex;
-
         /*Flex-direction */
         flex-direction: column;
-
-        /*    Flex-wrap -Nowrap = flex will try and fit everything onto one line */
-
+        /*Flex-wrap -Nowrap = flex will try and fit everything onto one line */
         flex-wrap: nowrap;
-
-        /*
-        * Flex flow is shorthand for both of these
-        *  Flex-flow: direction wrap
-        */
-        flex-flow: row wrap;
-
-        /*
-        *   Justify-content - This property defines how to align the content with the space available
-        *                     IMPORTANT:  Note this applies to the main axis
-        *                     i.e the flow of the flex box its the opposite of align-items property
-        *
-        *   There are several options:
-        *
-        *    *flex-start *flex-end *center *space-between *space-around *space-evenly
-        */
-
-        justify-content: space-evenly;
-
-        /*
-        *   Align-items  - this property aligns all the items along the cross axis
-        *                 IMPORTANT this is the opposite axis to the justify-content property
-        *                 Options are:
-        *
-        *                  *stretch *flex-start *flex-end *center *baseline
-        *
-        */
-
-        align-items:  center;
-
-        /*
-        *     Align-content - This aligns a flex container's lines within when there is
-        *                     extra space in the cross-axis, similar to how justify-content aligns
-        *                     individual items within the main-axis. Options:
-        *
-        *      *flex-start *flex-end *center *space-between *space-around *space-evenly
-        */
-
-        Align-content: flex-start;
-
-
+        /*Justy the content on the main axis with space between*/
+        justify-content: space-between;
+        /*Alignt content on the cross axis in the center of the flex box*/
+        Align-content: center;
       }
 
       #main-doc{
-        /*Order - First item*/
 
+        /*Flex Box item settings for the flex box container in #flex-container/*
+        /*Order - Second item displayed*/
         order: 2;
-
         /* Flex Grow */
-
         flex-grow: 1;
-
         /*Flex-shrink */
-
-        flex-shrink 1;
-
-        /*
-        *   Flex-basis - This defines the default size of an element before the remaining space
-        *                is distributed. It can be a length (e.g. 20%, 5rem, etc.) or a keyword.
-        *                The auto keyword means "look at my width or height property" (which was
-        *                temporarily done by the main-size keyword until deprecated). The content
-        *                keyword means "size it based on the item's content" - this keyword isn't
-        *                well supported yet, so it's hard to test and harder to know what its brethren
-        *                max-content, min-content, and fit-content do.
-        */
-
+        flex-shrink: 1;
+        /*Use 80% of the space before distruting the rest*/
         flex-basis: 80%;
+        /*Ensure the this item is aligned to the right of the flex box*/
+        align-self: flex-end;
 
-
-        /*
-        *     Align-self - This allows the default alignment (or the one specified by align-items)
-        *                  to be overridden for individual flex items.
-        *
-        *                 Please see the align-items explanation (container) to understand the available values.
-        */
-
-        align-self: flex-start;
+        /*Always ensure there is some padding on the top*/
+        padding-top: 5%;
+        /*Ensure 20% padding to allow for the navigation*/
+        padding-left: 20%;
+        /*Ensure the max width is only 80% of the container at most*/
+        max-width: 80%;
+        /*bit of a margin*/
+        margin: 5px;
       }
+      #navbar{
 
-
-
-
-        #navbar{
-
+          /*Flex Box item settings for the flex box container in #flex-container/*
           /*Order - First item*/
-
           order: 1;
-
           /* Flex Grow */
-
           flex-grow: 1;
-
           /*Flex-shrink */
-
-          flex-shrink 1;
-
-          /*
-          *   Flex-basis - This defines the default size of an element before the remaining space
-          *                is distributed. It can be a length (e.g. 20%, 5rem, etc.) or a keyword.
-          *                The auto keyword means "look at my width or height property" (which was
-          *                temporarily done by the main-size keyword until deprecated). The content
-          *                keyword means "size it based on the item's content" - this keyword isn't
-          *                well supported yet, so it's hard to test and harder to know what its brethren
-          *                max-content, min-content, and fit-content do.
-          */
-
+          flex-shrink: 1;
+          /*Ensure that only 20% of the flexbox is used before distrubting the rest of the space*/
           flex-basis: 20%;
-
-
-          /*
-          *     Align-self - This allows the default alignment (or the one specified by align-items)
-          *                  to be overridden for individual flex items.
-          *
-          *                 Please see the align-items explanation (container) to understand the available values.
-          */
-
+          /*Align with the left hand side of the flex box*/
           align-self: flex-start;
-
           /*fix the positon*/
           position: fixed;
           /*algin fully with the left hand side of the page*/
           left: 0;
-          /*set a width*/
-          width: 300px;
 
-          
+          /*Set a max width otherwise it could be a bit odd*/
+          max-width: 200px;
+          margin: 5px;
 
+          /*
+          *     Use a flex box to hold the #nav-links columns
+          */
+          /*display: flex - Turn on flex*/
+          display: flex;
+          /*Flex-direction of column */
+          flex-direction: column;
+          /*    Flex-wrap -Nowrap = flex will try and fit everything onto one line */
+          flex-wrap: nowrap;
+          /*use space around to justify the content*/
+          justify-content: space-around;
+          /*Align all items to the center of the containter*/
+          align-items:  center;
+          /*Align content to the center*/
+          Align-content: center;
         }
 
+        #nav-link{
+          /*Flex Box item settings for the flex box container in #nav bar/*
+          /*Order - First item*/
+          order: 1;
+          /* Flex Grow */
+          flex-grow: 1;
+          /*Flex-shrink */
+          flex-shrink: 1;
+          /*Only use 80% of the space available*/
+          flex-basis: 80%;
+          /*align to the center*/
+          align-self: center;
+        }
       }
 
-    }
   </style>
 
   <head>
