added some style to the code

--- a/tech_doc.html
+++ b/tech_doc.html
@@ -107,6 +107,16 @@
 
       }
 
+      code{
+        font-style: italic;
+        text-align: justify;
+        padding: 2px;
+        border: 2px;
+        background-color: white;
+        width: 80%;
+        max-width: 90%;
+      }
+
       /*User story 4 - headings*/
       #Introduction{
 
