fixed the bullet points html for datatypes

--- a/tech_doc.html
+++ b/tech_doc.html
@@ -506,12 +506,12 @@
                <ul>
                  <li>Six data types that are primitives:</li>
                    <ul>
-                     <li>Boolean. true and false.<li>
+                     <li>Boolean. true and false.</li>
                      <li>null. A special keyword denoting a null value. Because JavaScript is case-sensitive, null is not the same as Null, NULL, or any other variant.</li>
-                     <li>undefined. A top-level property whose value is undefined.<li>
+                     <li>undefined. A top-level property whose value is undefined.</li>
                      <li>number. 42 or 3.14159.</li>
                      <li>String. "Howdy"</li>
-                     <li>Symbol (new in ECMAScript 2015). A data type whose instances are unique and immutable.<li>
+                     <li>Symbol (new in ECMAScript 2015). A data type whose instances are unique and immutable.</li>
                    </ul>
                  <li>and Object</li>
                </ul>
